--- a/page1.css
+++ b/page1.css
@@ -16,6 +16,7 @@ body{
     background-attachment: fixed;
     background-size: cover;
     display: flex;
+    flex-direction: wrap;
     justify-content: center;
     align-items: center;
     height: 90vh;
@@ -62,6 +63,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-left: 2%;
+    margin-right: 2%;
     font-size: 26px;
     width: 450px;
     margin-left: 5%;
@@ -88,47 +90,6 @@ body{
     transform: scale(1.1);
 }
 .btn2:active{
-    box-shadow: 
-    0 0 10px rgb(61, 61, 61),
-    inset -20px -20px 10px rgb(61, 61, 61),
-    0 0 15px rgb(61, 61, 61);    
-    transform: scale(1.3);
-}
-.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration:none;
-    top: 60%;
-    left: 60vh;
-    position: absolute;
-    margin-left: 2%;
-    font-size: 26px;
-    width: 450px;
-    margin-left: 5%;
-    height: 140px;
-    border-radius: 50px;
-    background: transparent;
-    color: rgb(223, 223, 223);
-    text-shadow:
-    0 0 3px rgb(39, 0, 0),
-    0 0 5px rgb(255, 255, 255);
-    border: solid 1px rgb(61, 61, 61);
-    box-shadow: 
-    0 0 10px rgb(61, 61, 61),
-    inset 20px 20px 10px rgb(61, 61, 61),
-    0 0 15px rgb(61, 61, 61);
-    cursor: pointer;
-    transition: all .9s;
-}
-.btn:hover{
-    box-shadow: 
-    0 0 10px rgb(61, 61, 61),
-    inset -20px -20px 10px rgb(61, 61, 61),
-    0 0 15px rgb(61, 61, 61);    
-    transform: scale(1.1);
-}
-.btn:active{
     box-shadow: 
     0 0 10px rgb(61, 61, 61),
     inset -20px -20px 10px rgb(61, 61, 61),
@@ -177,7 +138,7 @@ body{
     inset 0 0 40px #777,
     0 0 80px #777,
     0 0 160px #777;
-    animation:anim infinite 10s ;
+    animation:anim infinite 4s ;
 }
 @keyframes anim{
     0%{
@@ -256,4 +217,40 @@ label{
       transform: rotate(300deg);
     }
   }
-  
+  .btn3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    width: 450px;
+    margin-left: 2%;
+    margin-right: 2%;
+    height: 140px;
+    border-radius: 50px;
+    background: transparent;
+    color: rgb(235, 235, 235);
+    text-shadow:
+    0 0 3px rgb(39, 0, 0),
+    0 0 5px rgb(255, 255, 255);
+    border: solid 1px rgb(61, 61, 61);
+    box-shadow: 
+    0 0 10px rgb(61, 61, 61),
+    inset 20px 20px 10px rgb(61, 61, 61),
+    0 0 15px rgb(61, 61, 61);
+    cursor: pointer;
+    transition: all .9s;
+}
+.btn3:hover{
+    box-shadow: 
+    0 0 10px rgb(61, 61, 61),
+    inset -20px -20px 10px rgb(61, 61, 61),
+    0 0 15px rgb(61, 61, 61);    
+    transform: scale(1.1);
+}
+.btn3:active{
+    box-shadow: 
+    0 0 10px rgb(61, 61, 61),
+    inset -20px -20px 10px rgb(61, 61, 61),
+    0 0 15px rgb(61, 61, 61);    
+    transform: scale(1.3);
+}
